src/test/ui/regions/issue-28848.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-28848.rs:10:5
   |
LL |     Foo::<'a, 'b>::xmute(u)
   |     ^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'b` as defined here
  --> $DIR/issue-28848.rs:9:16
   |
LL | pub fn foo<'a, 'b>(u: &'b ()) -> &'a () {
   |                ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined here
  --> $DIR/issue-28848.rs:9:12
   |
LL | pub fn foo<'a, 'b>(u: &'b ()) -> &'a () {
   |            ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
